<resources>
    <string name="app_name">EstacionamientoTP</string>
    <string name="ingresar">INGRESAR</string>
    <string name="registrarse">registrarse</string>
    <string name="generar_ticket">GENERAR TICKET</string>
    <string name="patente">PATENTE</string>
    <string name="tiempo_de_estadia">TIEMPO DE ESTADIA</string>
    <string name="monto_bruto">MONTO BRUTO</string>
    <string name="recargo_por_vehiculo">RECARGO POR VEHICULO</string>
    <string name="descuento_por_cliente">DESCUENTO POR CLIENTE</string>
    <string name="monto_final">MONTO FINAL</string>
    <string name="ticket_nro">ticket nro</string>
    <string name="usuario">USUARIO</string>
    <string name="nombre_registrarse">NOMBRE</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="apellido">APELLIDO</string>
    <string name="abonar_ticket">ABONAR TICKET</string>
    <string name="historial_tickets">HISTORIAL TICKETS</string>
    <string name="ingrese_saldo">ingrese saldo</string>
    <string name="numero_ticket_ingreso">NUMERO TICKET</string>
    <string name="estado">ESTADO</string>
    <string name="cargar_saldo">CARGAR SALDO</string>
    <string name="saldo"> VER SALDO</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>