<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Abonar_Ticket_Activity">

    <TextView

        android:id="@+id/titulo_patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/patente"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/patente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="@+id/titulo_patente"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_tiempoEstadia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/tiempo_de_estadia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_patente" />

    <TextView
        android:id="@+id/titulo_monto_bruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/monto_bruto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_tiempoEstadia" />

    <TextView
        android:id="@+id/titulo_recargo_por_vehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/recargo_por_vehiculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_monto_bruto" />

    <TextView
        android:id="@+id/titulo_descuento_por_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/descuento_por_cliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_recargo_por_vehiculo" />

    <TextView
        android:id="@+id/titulo_monto_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:text="@string/monto_final"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_descuento_por_cliente" />

    <TextView
        android:id="@+id/tiempo_estadia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@+id/titulo_tiempoEstadia"
        app:layout_constraintTop_toBottomOf="@+id/titulo_numero_ticket" />

    <TextView
        android:id="@+id/monto_bruto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/titulo_monto_bruto"
        app:layout_constraintTop_toBottomOf="@+id/tiempo_estadia" />

    <TextView
        android:id="@+id/recargo_vehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/titulo_recargo_por_vehiculo"
        app:layout_constraintTop_toBottomOf="@+id/monto_bruto" />

    <TextView
        android:id="@+id/descuento_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toEndOf="@+id/titulo_descuento_por_cliente"
        app:layout_constraintTop_toBottomOf="@+id/recargo_vehiculo" />

    <TextView
        android:id="@+id/monto_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"

        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toEndOf="@+id/titulo_monto_final"
        app:layout_constraintTop_toBottomOf="@+id/descuento_cliente" />

    <TextView
        android:id="@+id/numero_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/titulo_numero_ticket"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_numero_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="4dp"
        android:text="@string/ticket_nro"
        app:layout_constraintStart_toEndOf="@+id/patente"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titulo_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/estado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_descuento_por_cliente"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/tv_estado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="@id/monto_final"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toEndOf="@+id/tv_titulo_estado"

        app:layout_constraintTop_toBottomOf="@+id/descuento_cliente"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        style="@style/ET_style"
        android:id="@+id/et_generar_ticket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_generar_ticket"
        app:layout_constraintBottom_toTopOf="@id/bt_pago_ticket"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/numero_ticket_ingreso"
        tools:ignore="NotSibling" />


    <ImageView
        android:id="@+id/im_pagar"
        android:layout_width="95dp"
        android:layout_height="94dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monto_final"
        app:srcCompat="@drawable/vecteezy_money_video_play_logo_template_design_modern_logo_video_for_13222403"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/bt_pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PAGAR"
        app:layout_constraintBottom_toBottomOf="@+id/im_pagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_pagar"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>