<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Registrarse_Activity"

        >

        <ImageView
            android:id="@+id/datsun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"

            android:src="@drawable/datsun"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usuario_registarse"
            android:layout_width="241dp"
            android:layout_height="73dp"
            app:boxBackgroundColor="#AE27E8BB"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.079">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_usuario_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombre_registrarse"
            android:layout_width="242dp"
            android:layout_height="76dp"
            app:boxBackgroundColor="#AE27E8BB"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usuario_registarse"
            app:layout_constraintVertical_bias="0.079">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nombre_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_registrarse" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apellido_registrarse"
            android:layout_width="241dp"
            android:layout_height="77dp"
            app:boxBackgroundColor="#AE27E8BB"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:counterTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombre_registrarse"
            app:layout_constraintVertical_bias="0.079">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_apellidoRegistrarse"
                style="@style/ET_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellido"
                android:textColor="#0C0C0C" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contrasenia_registrarse"
            android:layout_width="239dp"
            android:layout_height="79dp"
            app:boxBackgroundColor="#AE27E8BB"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterTextColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apellido_registrarse"
            app:layout_constraintVertical_bias="0.079">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contraseña_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrase_a"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/patente_registrarse"
            android:layout_width="243dp"
            android:layout_height="56dp"
            app:boxBackgroundColor="#AE27E8BB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contrasenia_registrarse"
            app:layout_constraintVertical_bias="0.079">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_patente_registrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patente" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/registrar_usuario"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patente_registrarse"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/automovil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Automovil"
                android:textColor="#EEFF41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vehiculo_pesado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patente_registrarse" />

            <RadioButton
                android:id="@+id/vehiculo_pesado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Vehiculo pesado"
                android:textColor="#EEFF41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patente_registrarse" />

            <RadioButton
                android:id="@+id/motocicleta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Moto"
                android:textColor="#EEFF41"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toEndOf="@+id/vehiculo_pesado"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.853" />
        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/registrar_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:srcCompat="@android:drawable/ic_input_add"
            tools:ignore="SpeakableTextPresentCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>